system/infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-sample-service
spec:
  type: ClusterIP
  selector:
    app: python-sample # Label pods must match to receive service traffic
  ports:
    - port: 80 # Port to receive service traffic
      targetPort: 5000 # Port to send traffic to pod
