system/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-sample-ingress
  labels:
    app: python-sample
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "app.INGRESS_EXTERNAL_IP.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: python-sample-service
                port:
                  number: 80
